[package]
name = "gauss_jordan_elimination"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple implementation of Gauss-Jordan elimination."
repository = "https://github.com/burakemir/gauss-jordan-elimination/"

[dependencies]
num = {version = "0.4.0", optional = true}

[features]
generic_calculation = ["dep:num"]
default = []